# lambda

./: .gitignore  ChangeLog  INSTALL  INSTALL.md  LICENSE.md  README  README.md  README.rst  TODO
dependencies/: Makefile
dependencies/revel-1.1.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  THANKS  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
dependencies/revel-1.1.0/VC7/: librevel.vcproj  revel.sln  reveltest.vcproj
dependencies/revel-1.1.0/autom4te.cache/: output.0  traces.0
dependencies/revel-1.1.0/m4/: Makefile  Makefile.in
dependencies/revel-1.1.0/src/: Makefile  Makefile.in  XvidEncoder.cpp  avilib.c  revelcore.cpp
dependencies/revel-1.1.0/src/.deps/: BaseEncoder.Po  XvidEncoder.Po  avilib.Po  revelcore.Po
dependencies/revel-1.2.0/src/: BaseEncoder.cpp  BaseEncoder.h  Makefile  Makefile.am  Makefile.in  XvidEncoder.cpp  XvidEncoder.h  avilib.c  revelcore.cpp  reveltest.cpp
dependencies/revel-1.2.0/src/.deps/: BaseEncoder.Po  XvidEncoder.Po  avilib.Po  revelcore.Po
doc/: ,  MANUAL.HTM  lambda-manual.md  simformat.md  style.css
pics/: lambdaicon.icns
scripts/: converter.m  converter.sce  createsim_filter.cat  createsim_filter.sce  createsim_velosource.m  createsim_velosource.sce  example_velosource.sim  readrce.m  readrce.sce
sims/: example.sim  example_velosource.avi
src/: Cimg-113.h  Info.plist  Info~.plist  Lambda-OSX.pro  Lambda.pro  Makefile  icon.rc  install-osx.sh  lambda-orig.cpp  lambda-orig.h  lambda.cpp  lambda.h  lambda.pro  main.cpp  make-dmg.sh  moc_lambda.cpp  revel.h
(+57 files in other folders)
